Fixed bug where left and right controls jumped up and down

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -751,7 +751,7 @@ Spinner and Loading CSS
 	z-index: 2;
 }
 #factoid-slider .left-control, #factoid-slider .right-control {
-	position: absolute;
+	position: fixed;
 	top: 50%;
 	height: 51px;
 	width: 51px;
